# mycardiograph

./: .gitignore  Cargo.toml  README.md  root@192.168.1.163
src/: heartbeat_message.rs  lib.rs  main.rs
src/health_monitoring/: core.rs  error.rs
src/install_scripts/: init_myheart.sh  init_myheart1.sh  install_myheart.sh  uninstall_myheart.sh
src/logger/: core.rs  error.rs  mod.rs
