[package]
name = "mycardiograph"
version = "0.1.0"
edition = "2024"
authors = ["Norbert Herbert <norbert.herbert@gmail.com>"]
description = "Availability monitoring with UDP heartbeats"

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"

#### logger
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }

derive_more = { version = "2.0.1", features =["from", "display"] }


[[bin]]
name = "myheart"

