[package]
name = "cardiograph"
default-run = "cardiograph"
version = "0.1.1"
edition = "2024"
authors = ["Norbert Herbert <norbert.herbert@gmail.com>"]
description = "Availability monitoring with UDP heartbeats"

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"

#### logger
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "time"] }

derive_more = { version = "2.0.1", features =["from", "display"] }
sysinfo = { version = "0.36.1", features =[] }
tokio = { version = "1.47.1", features = ["full"] }

[[bin]]
name = "myheart"
